test/corpus/extensions.txt
================================================================================
Quadratic objective and constraints
================================================================================
Minimize
 obj: 2 x + [ x ^ 2 + 4 x * y ] / 2 + 1
Subject To
 q1: x + [ x ^ 2 + y ^ 2 ] <= 4
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (objectives_section
    (named_objective
      (objective_name)
      (linear_expression
        (term
          (number)
          (identifier))
        (quadratic_block
          (quadratic_term
            (identifier)
            (number))
          (quadratic_term
            (number)
            (identifier)
            (identifier))
          (number))
        (term
          (number)))))
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier))
        (quadratic_block
          (quadratic_term
            (identifier)
            (number))
          (quadratic_term
            (identifier)
            (number))))
      (comparison_operator)
      (number)))
  (end_marker))

================================================================================
Indicator constraints
================================================================================
Minimize
 x
Subject To
 cap: b1 = 1 -> x <= 3
 b1 = 0 -> 2 <= x
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (objectives_section
    (linear_expression
      (term
        (identifier))))
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (indicator
        (identifier)
        (number))
      (linear_expression
        (term
          (identifier)))
      (comparison_operator)
      (number))
    (constraint
      (indicator
        (identifier)
        (number))
      (number)
      (comparison_operator)
      (linear_expression
        (term
          (identifier)))))
  (end_marker))

================================================================================
Ranged, flipped and constant constraints
================================================================================
Minimize
 obj: x + 10
Subject To
 r: 2 <= x + y <= 10
 f: 10 >= x
 c: x + 2 =< 10
 d: y => -inf
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (objectives_section
    (named_objective
      (objective_name)
      (linear_expression
        (term
          (identifier))
        (term
          (number)))))
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (number)
      (comparison_operator)
      (linear_expression
        (term
          (identifier))
        (term
          (identifier)))
      (comparison_operator)
      (number))
    (constraint
      (constraint_name)
      (number)
      (comparison_operator)
      (linear_expression
        (term
          (identifier))))
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier))
        (term
          (number)))
      (comparison_operator)
      (number))
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier)))
      (comparison_operator)
      (infinity)))
  (end_marker))

================================================================================
Empty objective
================================================================================
Minimize
Subject To
 c: x >= 1
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier)))
      (comparison_operator)
      (number)))
  (end_marker))

================================================================================
Multi-objectives with attributes
================================================================================
Minimize multi-objectives
 Cost: Priority=2 Weight=1 AbsTol=0.5
  3 x + 2 y
 Plain:
  x - y
Subject To
 c1: x + y >= 2
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (multi_objectives_keyword)
  (objectives_section
    (named_objective
      (objective_name)
      (objective_attribute
        (attribute_name)
        (number))
      (objective_attribute
        (attribute_name)
        (number))
      (objective_attribute
        (attribute_name)
        (number))
      (linear_expression
        (term
          (number)
          (identifier))
        (term
          (number)
          (identifier))))
    (named_objective
      (objective_name)
      (linear_expression
        (term
          (identifier))
        (term
          (identifier)))))
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier))
        (term
          (identifier)))
      (comparison_operator)
      (number)))
  (end_marker))

================================================================================
Lazy constraints and user cuts
================================================================================
Minimize
 x
Subject To
 c1: x >= 1
Lazy Constraints
 l1: x + y <= 10
User Cuts
 u1: x - y >= -4
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (objectives_section
    (linear_expression
      (term
        (identifier))))
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier)))
      (comparison_operator)
      (number)))
  (lazy_constraints_section
    (lazy_constraints_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier))
        (term
          (identifier)))
      (comparison_operator)
      (number)))
  (user_cuts_section
    (user_cuts_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier))
        (term
          (identifier)))
      (comparison_operator)
      (number)))
  (end_marker))

================================================================================
General constraints
================================================================================
Maximize
 r1
Subject To
 c1: x1 + x2 <= 10
General Constraints
 gc_max: r1 = MAX ( x1 , x2 , 3 )
 b4 = OR ( b1 , b2 )
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (objectives_section
    (linear_expression
      (term
        (identifier))))
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier))
        (term
          (identifier)))
      (comparison_operator)
      (number)))
  (general_constraints_section
    (general_constraints_keyword)
    (general_constraint
      (constraint_name)
      (identifier)
      (function_name)
      (identifier)
      (identifier)
      (number))
    (general_constraint
      (identifier)
      (function_name)
      (identifier)
      (identifier)))
  (end_marker))

================================================================================
Signed infinity does not swallow names
================================================================================
Minimize
 obj: x -inflow
Subject To
 c: x >= 0
End
--------------------------------------------------------------------------------

(source_file
  (sense)
  (objectives_section
    (named_objective
      (objective_name)
      (linear_expression
        (term
          (identifier))
        (term
          (identifier)))))
  (constraints_section
    (subject_to_keyword)
    (constraint
      (constraint_name)
      (linear_expression
        (term
          (identifier)))
      (comparison_operator)
      (number)))
  (end_marker))
